# PyMarkdownEditor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  build-requirements.txt  dev-requirements.txt  main.py  pyinstaller.spec  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/workflows/: ci.yml  pre-commit-autofix.yml  publish-to-test-pypi.yml  publish.yml  release-binaries.yml
docs/: CI.md  PLUGINS.md  RELEASING.md
pymd/: __init__.py  __main__.py  app.py  app_bootstrapper.py  main.py
pymd/di/: __init__.py  container.py
pymd/domain/: __init__.py  interfaces.py  models.py
pymd/plugins/: __init__.py  api.py  catalog.py  discovery.py  manager.py  pip_installer.py  state.py
pymd/plugins/builtin/: __init__.py  theme_plugin.py
pymd/services/: __init__.py  file_service.py  markdown_renderer.py  settings_service.py
pymd/services/config/: app_config.py  (+1 more)
pymd/ui/: __init__.py  main_window.py
pymd/utils/: __init__.py  constants.py
tests/: conftest.py  test_about_dialog.py  test_app.py  test_app_bootstrapper.py  test_app_config.py  test_container.py  test_exporter_registry.py  test_file_service.py  test_focus_dialogs.py  test_focus_services.py  test_html_exporter.py  test_ini_config_service.py  test_main_window.py  test_markdown_renderer.py  test_models.py  test_pdf_exporter.py  test_pip_installer.py  test_plugin_discovery.py  test_plugin_manager.py  test_plugin_state_store.py  test_plugins_dialog.py  test_settings_service.py  test_splash_screen.py  test_table_dialog.py
(+33 files in other folders)
