[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "py-markdown-editor"
version = "0.8.7"
authors = [
  { name="Clinton Wright", email="clintonshanewright@gmail.com" },
]
description = "A fast, minimal PyQt6 Markdown editor with live preview and HTML/PDF export"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/clintonshane84/PyMarkdownEditor"
Issues = "https://github.com/clintonshane84/PyMarkdownEditor/issues"

[tool.setuptools.packages.find]
include = ["pymd*"]
namespaces = true # Explicitly enables scanning for PEP 420 namespaces (default is true)
exclude = ["tests*"]
